--- a/03/Dockerfile
+++ b/03/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.17.2-stretch AS builder
+FROM golang:1.17.2-alpine3.14 AS builder
 WORKDIR /go/src
 COPY go.mod .
 COPY main.go .
@@ -6,9 +6,9 @@ RUN go mod vendor
 ENV CGO_ENABLED=0
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /go/bin/httpserver main.go
 
-FROM buildpack-deps:stretch-scm
+FROM alpine:3.14
 LABEL name="httpserver"
 WORKDIR /opt/httpserver
-COPY httpserver /opt/httpserver/
+COPY --form=builder /go/bin/httpserver /opt/httpserver/
 EXPOSE 8080
 ENTRYPOINT  ["/opt/httpserver/httpserver"]
